Step04_Thymeleaf 예제 완성함

--- a/Spring04_Thymeleaf/src/main/resources/templates/post/notice.html
+++ b/Spring04_Thymeleaf/src/main/resources/templates/post/notice.html
@@ -32,7 +32,7 @@
 				<p> first : [[${status.first}]]</p>
 				<p> last : [[${status.last}]]</p>
 				<p> size : [[${status.size}]]</p>
-				<p> current : [[${status.size}]]</p>
+				<p> current : [[${status.current}]]</p>
 			</li>
 		</ul>
 		
