--- a/Spring04_Thymeleaf/src/main/resources/templates/home.html
+++ b/Spring04_Thymeleaf/src/main/resources/templates/home.html
@@ -2,13 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>/templates/home.html</title>
+<title th>/templates/home.html</title>
 <link rel="stylesheet" th:href="@{/css/custom.css}"/>
 </head>
 <body>
 	<!-- 웹브라우저가 무시하는 주석 -->
 	<!--/* Thymeleaf 가 무시하는 주석 */-->
-	<div class="container">
+	<div class="container" >
 		<h1>인덱스 페이지 입니다.</h1>
 		<p>
 			오늘의 인물 : <strong>[[${personToday}]]</strong>
@@ -27,6 +27,10 @@
 			<li><a th:href="@{/buy?id=99&category=foods}">99 번 음식 주문하기</a></li>
 			<li><a th:href="@{'/buy?id=' + ${id} + '&category=' + ${category} }">99 번 음식 주문하기</a></li>
 			<li><a th:href="@{/buy(id=${id}, category=${category})}">99 번 음식 주문하기</a></li>
+			<li><a th:href="@{/if}">조건부 렌더링</a></li>
+			<li><a th:href="@{/javascript}">javascript 관련 기능</a></li>
+			<li><a th:href="@{/include}">include 테스트</a></li>
+			<li><a th:href="@{/unescape}">unescape html 테스트</a></li>
 		</ul>
 	</div>
 </body>
