Spring10 프로젝트에 post 목록보기 기능 구현함

--- a/Spring10_Example/src/main/resources/templates/home.html
+++ b/Spring10_Example/src/main/resources/templates/home.html
@@ -18,7 +18,12 @@
 			<a th:href="@{/user/loginform}">로그인 하러가기</a>
 			<a th:href="@{/user/signup-form}">회원가입</a>
 		</div>
+		
 		<h1>인덱스 페이지 입니다</h1>
+		
+		<ul>
+			<li><a th:href="@{/post/list}">글목록보기</a></li>
+		</ul>
 		
 		<h2>공지사항</h2>
 		<ul>
@@ -27,3 +32,9 @@
 	</div>
 </body>
 </html>
+
+
+
+
+
+
