Spring10 프로젝트에 댓글 기본기능 구현함

--- a/Spring10_Example/src/main/resources/templates/post/view.html
+++ b/Spring10_Example/src/main/resources/templates/post/view.html
@@ -343,7 +343,7 @@
 			
 			if(!isLogin){
 				alert("로그인 페이지로 이동합니다");
-				location.href="[[@{/user/required-loginform}]]";
+				location.href="[[@{/user/loginform}]]";
 				return;
 			}
 			
