--- a/Spring11_JPA/src/main/resources/templates/member/list.html
+++ b/Spring11_JPA/src/main/resources/templates/member/list.html
@@ -14,6 +14,8 @@
 					<th>번호</th>
 					<th>이름</th>
 					<th>주소</th>
+					<th>수정</th>
+					<th>삭제</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -21,6 +23,12 @@
 					<td>[[${tmp.num}]]</td>
 					<td>[[${tmp.name}]]</td>
 					<td>[[${tmp.addr}]]</td>
+					<td>
+						<a th:href="@{/member/edit(num=${tmp.num})}">수정</a>
+					</td>
+					<td>
+						<a th:href="@{/member/delete(num=${tmp.num})}">삭제</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
